--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
     "vant": "^4.6.3",
     "vue": "^3.2.37",
@@ -18,6 +19,10 @@
   "devDependencies": {
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "sass": "^1.64.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
